Bug 530170 - Prefer using Boolean.valueOf and Integer.ValueOf in Control.java
Change-Id: I2a033ec1af2fbc2a359c65b60f99958d8f4a77ba
Signed-off-by: Lars Vogel <Lars.Vogel@vogella.com>